fix overflow

--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: calc(100vh - 2.5rem);
-  width: 100vw;
+  width: 100%;
   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   font-size: 3rem;
   flex-direction: column;
